  * Fixed a sementation fault if the config tmp file did not contain the
    account shortname
  * Fixed broken bash-completion when oidcdir did not yet exist 

  [ Gabriel Zachmann ]
  * Fixed build error if bin dir not existed
  * Fixed a problem with unity OP where access token did not have any scope
  * Fixed strange additional parameters in the auth code exchange request 
  * Fixed superfluous error logs when checking if a string is a json object
  * Changed encoding for memory encryption from hex to base64 

  [ Gabriel Zachmann ]
  * Fixed a bug due to which oidc-agent would return a wrong already loaded
    account config when generating a new account config
  * Improved error handling when no authorization flow possible
  * Fixed a seg fault when dynamic client registration failed
  * Fixed a seg fault in memory decryption if account config does not have a
    client secret (public client)
  * Added support for PKCE
  * Added support for public clients
  * Fixed a bug where it was possible to display issuer urls that only differ
    in the trayling slash twice when using oidc-gen
  * Enforce usage of openid and offline_access scope in all cases

  [ Gabriel Zachmann ]
  * Improve error message when necessary scopes cannot be registered during
    dynamic client registration
  * If necessary scopes cannot be registered during dynamic client
    registration, a public client is tried
  * Fixed memory leaks
  * Allow updating of public clients by using the -m and --pub option

  [ Gabriel Zachmann ]
  * Added public client for aai.egi.eu

  [ Gabriel Zachmann ]
  * Changed the fundamental architecture by introducing a new proxy daemon
  * Now an account config can be updated by oidc-agent, i.e. when a provider
    issues a new refresh token
  * oidc-agent can manage the encryption password: store encrypted in memory,
    use keyring, use user provided command, or prompt the user

 -- Marcus Hardt <hardt@kit.edu>  Wed, 06 Feb 2019 13:29:45 +0100