@@ -5,4 +5,6 @@
 
 oidc_error_t updateRefreshToken(const char* shortname,
                                 const char* refresh_token);
+char* getAutoloadConfig(const char* shortname, const char* application_hint);
+
 #endif  // OIDC_PROXY_HANDLER_H
