@@ -181,5 +181,7 @@ oidc-agent (2.3.0-dev) UNRELEASED; urgency=medium
     issues a new refresh token
   * oidc-agent can manage the encryption password: store encrypted in memory,
     use keyring, use user provided command, or prompt the user
+  * add autload possibility. If an application requests an access token for a
+    not loaded config, it is automatically loaded, if the user allows it.
 
  -- Marcus Hardt <hardt@kit.edu>  Wed, 06 Feb 2019 13:29:45 +0100
